# PyiBootlib

./: .gitignore  pyproject.toml  tool
ibootlib/: __main__.py  find.py  patch.py
